--- a/TopMusic/app/src/main/AndroidManifest.xml
+++ b/TopMusic/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="bo.com.cognos.conversormoneda">
+    package="bo.com.cognos.topmusic">
 
     <application
         android:allowBackup="true"
@@ -9,16 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" />
-        <activity android:name=".HelloActivity" />
-        <activity android:name=".HomeActivity" />
-        <activity android:name=".MenuActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".CancionActivity"></activity>
+
     </application>
 
 </manifest>
