--- a/TopMusic/app/build.gradle
+++ b/TopMusic/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
 }
 
 android.defaultConfig.vectorDrawables.useSupportLibrary = true
