--- a/TopMusic/app/build.gradle
+++ b/TopMusic/app/build.gradle
@@ -28,6 +28,9 @@ dependencies {
 
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 }
 
 android.defaultConfig.vectorDrawables.useSupportLibrary = true
