--- a/TopMusic/app/src/main/AndroidManifest.xml
+++ b/TopMusic/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="bo.com.cognos.topmusic">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -18,8 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CancionActivity"></activity>
-
+        <activity android:name=".CancionActivity" />
+        <activity android:name=".InfoActivity" />
     </application>
 
 </manifest>
