--- a/QuakeRadar/app/build.gradle
+++ b/QuakeRadar/app/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.android.support:cardview-v7:27.1.1'
+
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 }
 
 android.defaultConfig.vectorDrawables.useSupportLibrary = true
